--- a/style.css
+++ b/style.css
@@ -1,20 +1,85 @@
 img {
     display: block;
 }
-#wrapper {
-    max-width: 1400px;
-    min-width: 880px;
+.wrapper {
+    width: 90%;
+    margin-top: 120px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #ffff;
+    margin-bottom: 0px;
+    box-shadow: 0px 0px 3px;
 }
 body {
     margin: 0;
     padding: 0;
 	width: 100%;
     color: #3d1212;
-    background-color: silver;
-    font-family: 'Oswald', 'Droid Sans', 'sans-serrif';
+    background-color: #FFFDF2;
+    font-family: 'Nunito Sans', sans-serif;
+}
+nav.horizontalNav ul li:hover {
+    color: black;
+    border-bottom-color: #193441;
+    background-color: grey;
+}
+.active {
+    display: flex;
+    color: black;
+    background-color: grey;
+}
+.horizontalNav .active li a{
+    color: black;
+    background-color: grey;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 0px;
+    text-decoration: none;
+}
+.horizontalNav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #00ADB5;
+}
+.horizontalNav li {
+    float: left;
+}
+.horizontalNav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 19px;
+    text-decoration: none;
+}
+.horizontalNav {
+    width: 100%;
+}
+#topBar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-shadow: 0px 0px 3px;
+}
+
+#logo {
+    float: right;
+    width: 400px;
+    height: 100%;
+    font-size: 40px;
+    background-color: #00ADB5;
+    text-align: center;
+}
+#logo p {
+    color: #ffff;
+    font-weight: bold;
+    margin-top: 5px;
+}
+#topBar {
+    height: 60px;
+    width: 100%;
+    display: flex;
 }
 #content {
     display: flex;
@@ -22,134 +87,178 @@ body {
     background-color: #ffff;
     box-shadow: 0px 0px 3px;
 }
-#pictures {
-    width: 100%;
-    display: flex;
-    position: relative;
-}
-#pictures img {
-    float: left;
-    width: 100%;
-}
-#imageCaption1 {
-    padding: 5px;
-    position: absolute;
-    top: 80%;
-    left: 22%;
-    background-color: #ffff;
-    width: 13%;
-    box-shadow: 0px 0px 3px;
-}
-#imageCaption2 {
-    padding: 5px;
-    position: absolute;
-    top: 80%;
-    left: 60%;
-    background-color: #ffff;
-    width: 10%;
-    box-shadow: 0px 0px 3px;
-}
-#imageCaption3 {
-    padding: 5px;
-    position: absolute;
-    top: 80%;
-    left: 92%;
-    background-color: #ffff;
-    width: 10%;
-    box-shadow: 0px 0px 3px;
-}
-
-.picColumn {
-
-}
-
-#main {
-    width: 80%;
-    display: block;
-    padding-bottom: 10px;
-}
-#sidebar {
-    padding: 10px;
-    border-style: solid;
-    width: 20%;
-    display: block;
-    text-align: center;
-}
-
-.verticalNav {
+#introBox {
+    padding-top: 30px;
+    padding-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    width: 80%;
-}
-
-.verticalNav ul {
     text-align: center;
-    list-style-type: none;
-    padding: 0;
-}
-
-.verticalNav ul a {
-    text-decoration: none;
-}
-
-.verticalNav li {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom-style: solid;
-    font-size: 28px;
-    text-decoration: none;
-    text-align: center;
-    color: #3d1212;
-}
-
-nav.verticalNav ul li:hover {
+    display: block;
+    width: 100%;
+    background-color: grey;
     color: black;
-    border-bottom-color: #3d1212;
+}
+h1 {
+    font-size: 70px;
+    margin-bottom: 10px;
+    margin-top: 0;
+    color: #ffff;
+}
+#introBox img.profile {
+    border-radius: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#introBox img.profile:hover {
+    
+}
+
+
+#socialMedia {
+    margin-left: auto;
+    margin-right: auto;
+    width: 650px;
+    display: flex;
+    
+}
+
+.icon {
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    display: flex;
+}
+
+.icon a img {
+    position: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#socialMedia a img:hover {
+    transform: scale(1.2);
+}
+
+#columns {
+    display: flex;
+    padding: 10px;
+    background-color: #ffff;
+}
+#about {
+    padding: 10px;
+    width: 65%;
+}
+#about p {
+    font-size: 20px;
+}
+#facts {
+    padding: 10px;
+    width: 34%;
+}
+
+table {
+    
+}
+
+table.facts, td, th {
+    padding: 5px;
+    
+}
+
+table.facts, td{
+    border-spacing: 10px;
+    text-align: left;
+}
+table.facts th {
+    color: #ffff;
+    width: 25%;
+    font-size: 20px;;
+    background-color: #00ADB5;
+}
+h3 {
+    font-size: 30px;
+    margin: 0;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: #00ADB5;
+}
+h4 {
+    margin: 0;
+    padding-right: 40px;
+    float: right;
+    font-size: 24px;
+}
+
+#wrapper2 {
+    width: 90%;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 120px;
+    box-shadow: 0px 0px 3px;
+}
+
+#footer {
+    height: 60px;
+    width: 100%;
+    padding-top: 20px;
+    text-align: center;
+    background-color: #00ADB5;
+    box-shadow: 0px 0px 3px;
+}
+#footer p {
+    color: #ffff;
+}
+#columns2 {
+    display: flex;
+    padding: 0;
+    background-color: #ffff;
+}
+
+#experience {
+    display: block;
+    padding: 20px;
+    width: 50%;
+}
+#job {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 20px;
+}
+.OWF {
+    width: 80%;
+    max-width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.warner {
+    width: 50%;
+    max-width: 350px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#experiencePhoto {
+    float: right;
+    width: 50%;
+    padding: 0;
     background-color: grey;
 }
-
-#info {
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    width: 95%;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: beige;
+#description {
     text-align: left;
 }
 
-#info p {
-    font-size: 20px;
-}
 
 
-h1 {
-	margin-right: auto;
-	margin-left: auto;
-	text-align: center;
-	font-size: 50px;
-}
 
-h2 {
-    font-size: 24px;
-    text-align: left;
-    font-style: italic;
-}
 
-h3 {
-    font-size: 20px;
-}
 
-.topstripe {
-    text-align: center;
-    background-color: #4c0f0f;
-    color: #fff;
-    padding: 5px;
-    height: 20px;
-    font-weight: bold;
-    font-size: 15px;
-}
+
+
+
 
 
 
