--- a/resume.css
+++ b/resume.css
@@ -23,8 +23,6 @@ nav.horizontalNav ul li:hover {
     background-color: grey;
 }
 .active {
-    display: flex;
-    color: black;
     background-color: grey;
 }
 .horizontalNav .active li a{
@@ -95,8 +93,9 @@ nav.horizontalNav ul li:hover {
     text-align: center;
     display: block;
     width: 100%;
+    height: 100%;
     background-image: url(pictures/profile_Ireland2.jpg);
-    background-size: 1300px;
+    background-size: 100%;
     background-position: center;
     background-repeat: no-repeat;
     color: black;
@@ -104,9 +103,11 @@ nav.horizontalNav ul li:hover {
 }
 
 #introContent {
-    width: 100%;
-    padding-top: 480px;
-    padding-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    width: 90%;
+    padding-top: 30%;
+    padding-bottom: 1%;
 }
 h1 {
     font-size: 80px;
@@ -196,6 +197,7 @@ h3 {
     border-bottom-color: #00ADB5;
 }
 h4 {
+    display: flex;
     margin: 0;
     padding-right: 40px;
     float: right;
@@ -262,6 +264,63 @@ h4 {
     text-align: left;
 }
 
+#wrapper3 {
+    width: 90%;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 120px;
+    display: flex;
+}
+
+#subWrapper1 {
+    width: 50%;
+    margin-right: 20px;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+}
+#subWrapper2 {
+    width: 50%;
+    margin-left: 20px;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+}
+#skills {
+    width: 100%;
+    display: flex;
+}
+#subSkills {
+    width: 50%;
+    margin: 10px;
+}
+#subSkills p {
+    height: 10%;
+    text-align: center;
+    font-size: 20px;
+}
+.skillList {
+    padding: 0;
+}
+
+.skill {
+    display: flex;
+    margin-bottom: 20px;
+}
+.skill:hover {
+    transform: scale(1.1);
+}
+
+.skillItem {
+    padding-left: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 22px;
+}
+.myAnchor {
+    position: relative;
+}
 
 
 
