--- a/resume.css
+++ b/resume.css
@@ -1,21 +1,21 @@
 img {
     display: block;
 }
-.wrapper {
-    width: 90%;
-    margin-top: 10px;
+#wrapper {
+    max-width: 1200px;
+    min-width: 600px;
+    margin-top: 120px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 0px;
-    box-shadow: 0px 0px 3px;
+    background-color: #ffff;
 }
 body {
     margin: 0;
     padding: 0;
 	width: 100%;
     color: #3d1212;
-    background-color: #FFFDF2;
-    font-family: 'Nunito Sans', sans-serif;
+    background-color: silver;
+    font-family: 'Oswald', 'Droid Sans', 'sans-serrif';
 }
 nav.horizontalNav ul li:hover {
     color: black;
@@ -23,23 +23,15 @@ nav.horizontalNav ul li:hover {
     background-color: grey;
 }
 .active {
-    background-color: grey;
-}
-.horizontalNav .active li a{
     color: black;
     background-color: grey;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 0px;
-    text-decoration: none;
 }
 .horizontalNav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #00ADB5;
+    background-color: #193441;
 }
 .horizontalNav li {
     float: left;
@@ -48,31 +40,27 @@ nav.horizontalNav ul li:hover {
     display: block;
     color: white;
     text-align: center;
-    padding: 19px;
+    padding: 21px;
     text-decoration: none;
 }
 .horizontalNav {
-    width: 100%;
+    width: 80%;
 }
 #topBar {
     position: fixed;
     top: 0;
     width: 100%;
-    box-shadow: 0px 0px 3px;
 }
 
 #logo {
-    float: right;
-    width: 400px;
+    width: 600px;
     height: 100%;
     font-size: 40px;
-    background-color: #00ADB5;
+    background-color: #ffff;
     text-align: center;
 }
 #logo p {
-    color: #ffff;
-    font-weight: bold;
-    margin-top: 5px;
+    margin: auto;
 }
 #topBar {
     height: 60px;
@@ -93,27 +81,12 @@ nav.horizontalNav ul li:hover {
     text-align: center;
     display: block;
     width: 100%;
-    height: 100%;
-    background-image: url(pictures/profile_Ireland2.jpg);
-    background-size: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: black;
-    background-color: grey;
-}
-
-#introContent {
-    margin-right: auto;
-    margin-left: auto;
-    width: 90%;
-    padding-top: 30%;
-    padding-bottom: 1%;
+    background-color: cadetblue;
 }
 h1 {
-    font-size: 80px;
+    font-size: 70px;
     margin-bottom: 10px;
-    margin-top: 0;
-    color: #ffff;
+    margin-top: 0
 }
 #introBox img.profile {
     border-radius: 50%;
@@ -127,26 +100,22 @@ h1 {
 
 
 #socialMedia {
+    text-align: justify;
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 400px;
     display: flex;
-    
+    text-align: justify;
 }
 
-.icon {
-    justify-content: center;
-    align-items: center;
-    width: 25%;
-    display: flex;
-}
 
-.icon a img {
-    position: center;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 45px;
+
+#socialMedia > h4 {
+    margin: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 100%;
+    display: inline-block;
 }
 
 #socialMedia a img:hover {
@@ -156,179 +125,15 @@ h1 {
 #columns {
     display: flex;
     padding: 10px;
-    background-color: #ffff;
 }
 #about {
     padding: 10px;
     width: 65%;
 }
-#about p {
-    font-size: 20px;
-}
 #facts {
     padding: 10px;
-    width: 34%;
+    width: 20%;
 }
-
-table {
-    
-}
-
-table.facts, td, th {
-    padding: 5px;
-    
-}
-
-table.facts, td{
-    border-spacing: 10px;
-    text-align: left;
-}
-table.facts th {
-    color: #ffff;
-    width: 25%;
-    font-size: 20px;;
-    background-color: #00ADB5;
-}
-h3 {
-    font-size: 30px;
-    margin: 0;
-    border-bottom-style: solid;
-    border-bottom-width: 4px;
-    border-bottom-color: #00ADB5;
-}
-h4 {
-    display: flex;
-    margin: 0;
-    padding-right: 40px;
-    float: right;
-    font-size: 24px;
-}
-
-#wrapper2 {
-    width: 90%;
-    margin-top: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 120px;
-    box-shadow: 0px 0px 3px;
-}
-
-#footer {
-    height: 60px;
-    width: 100%;
-    padding-top: 20px;
-    text-align: center;
-    background-color: #00ADB5;
-    box-shadow: 0px 0px 3px;
-}
-#footer p {
-    color: #ffff;
-}
-#columns2 {
-    display: flex;
-    padding: 0;
-    background-color: #ffff;
-}
-
-#experience {
-    display: block;
-    padding: 20px;
-    width: 50%;
-}
-#job {
-    text-align: center;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top: 20px;
-}
-.OWF {
-    width: 80%;
-    max-width: 500px;
-    margin-right: auto;
-    margin-left: auto;
-}
-.warner {
-    width: 50%;
-    max-width: 350px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-#experiencePhoto {
-    float: right;
-    width: 50%;
-    padding: 0;
-    background-color: grey;
-}
-#description {
-    text-align: left;
-}
-
-#wrapper3 {
-    width: 90%;
-    margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 120px;
-    display: flex;
-}
-
-#subWrapper1 {
-    width: 50%;
-    margin-right: 20px;
-    background-color: #ffff;
-    box-shadow: 0px 0px 3px;
-    padding: 20px;
-}
-#subWrapper2 {
-    width: 50%;
-    margin-left: 20px;
-    background-color: #ffff;
-    box-shadow: 0px 0px 3px;
-    padding: 20px;
-}
-#skills {
-    width: 100%;
-    display: flex;
-}
-#subSkills {
-    width: 50%;
-    margin: 10px;
-}
-#subSkills p {
-    height: 10%;
-    text-align: center;
-    font-size: 20px;
-}
-.skillList {
-    padding: 0;
-}
-
-.skill {
-    display: flex;
-    margin-bottom: 20px;
-}
-.skill:hover {
-    transform: scale(1.1);
-}
-
-.skillItem {
-    padding-left: 20px;
-    margin-top: auto;
-    margin-bottom: auto;
-    font-size: 22px;
-}
-.myAnchor {
-    position: relative;
-}
-
-
-
-
-
-
-
-
 
 
 
