--- a/resume.css
+++ b/resume.css
@@ -1,72 +1,74 @@
 img {
     display: block;
 }
-#wrapper {
-    max-width: 1200px;
-    min-width: 600px;
-    margin-top: 120px;
+.wrapper {
+    width: 90%;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #ffff;
+    margin-bottom: 0px;
+    box-shadow: 0px 0px 3px;
 }
 body {
     margin: 0;
     padding: 0;
 	width: 100%;
     color: #3d1212;
-    background-color: silver;
-    font-family: 'Oswald', 'Droid Sans', 'sans-serrif';
-}
-nav.horizontalNav ul li:hover {
-    color: black;
-    border-bottom-color: #193441;
-    background-color: grey;
-}
-.active {
-    color: black;
-    background-color: grey;
-}
-.horizontalNav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #193441;
-}
-.horizontalNav li {
-    float: left;
-}
-.horizontalNav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 21px;
-    text-decoration: none;
-}
-.horizontalNav {
-    width: 80%;
-}
-#topBar {
-    position: fixed;
-    top: 0;
-    width: 100%;
+    background-color: #FFFDF2;
+    font-family: 'Nunito Sans', sans-serif;
 }
 
-#logo {
-    width: 600px;
-    height: 100%;
-    font-size: 40px;
-    background-color: #ffff;
+
+
+.navbar {
+    border-style: none;
+    background-color: #00ADB5;
+    margin: 0;
+    padding: 0;
+    box-shadow: 0px 0px 3px;
+}
+.navbar-brand {
+    
+    height:70px;
+    width: 340px;
+    background-color: grey;
+    box-shadow: 0px 0px 3px black;
+
+    
+    margin-right: 30px;
+    color: white !important;
+    font-size: 38px;
+    position: fixed;
+    top: 0px;
+    right: 0;
+}
+
+.navbar-brand p {
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    top: 30%;
 }
-#logo p {
-    margin: auto;
+
+.navbar-toggle {
+    margin-left: 10px;
+    float: left;
+    background-color: white !important;
 }
-#topBar {
-    height: 60px;
-    width: 100%;
-    display: flex;
+.navbar-toggle:hover {
+    background-color: #eaeaea !important;
 }
+
+.nav-link {
+    color: white !important;
+    font-size: 18px;
+}
+.nav-link:hover {
+    background-color: grey !important;
+}
+
+
 #content {
     display: flex;
     text-align: center;
@@ -80,13 +82,27 @@ nav.horizontalNav ul li:hover {
     margin-right: auto;
     text-align: center;
     display: block;
-    width: 100%;
-    background-color: cadetblue;
+
+    background-image: url(pictures/profile_Ireland2.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: black;
+    background-color: grey;
+}
+
+#introContent {
+    margin-right: auto;
+    margin-left: auto;
+    width: 90%;
+    padding-top: 30%;
+    padding-bottom: 1%;
 }
 h1 {
-    font-size: 70px;
+    font-size: 80px;
     margin-bottom: 10px;
-    margin-top: 0
+    margin-top: 0;
+    color: #ffff;
 }
 #introBox img.profile {
     border-radius: 50%;
@@ -100,22 +116,26 @@ h1 {
 
 
 #socialMedia {
-    text-align: justify;
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 40%;
     display: flex;
-    text-align: justify;
+    
 }
 
+.icon {
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    display: flex;
+}
 
-
-#socialMedia > h4 {
-    margin: 0;
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 100%;
-    display: inline-block;
+.icon a img {
+    position: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 45px;
 }
 
 #socialMedia a img:hover {
@@ -125,18 +145,173 @@ h1 {
 #columns {
     display: flex;
     padding: 10px;
+    background-color: #ffff;
 }
 #about {
     padding: 10px;
     width: 65%;
 }
+#about p {
+    font-size: 20px;
+}
 #facts {
     padding: 10px;
-    width: 20%;
+    width: 34%;
 }
 
+table {
+    
+}
 
+table.facts, td, th {
+    padding: 5px;
+    
+}
 
+table.facts, td{
+    border-spacing: 10px;
+    text-align: left;
+}
+table.facts th {
+    border-style: solid;
+    border-width: 5px;
+    border-color: white;
+    color: #ffff;
+    width: 25%;
+    font-size: 20px;;
+    background-color: #00ADB5;
+}
+h3 {
+    font-size: 30px;
+    margin: 0;
+    border-bottom-style: solid;
+    border-bottom-width: 4px;
+    border-bottom-color: #00ADB5;
+}
+h4 {
+    display: flex;
+    margin: 0;
+    padding-right: 40px;
+    float: right;
+    font-size: 24px;
+}
 
+#wrapper2 {
+    width: 90%;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 120px;
+    box-shadow: 0px 0px 3px;
+}
+
+#footer {
+    height: 60px;
+    width: 100%;
+    padding-top: 20px;
+    text-align: center;
+    background-color: #00ADB5;
+    box-shadow: 0px 0px 3px;
+}
+#footer p {
+    color: #ffff;
+}
+#columns2 {
+    display: flex;
+    padding: 0;
+    background-color: #ffff;
+}
+
+#experience {
+    display: block;
+    padding: 20px;
+    width: 50%;
+}
+#job {
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 20px;
+}
+.OWF {
+    width: 80%;
+    max-width: 500px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.warner {
+    width: 50%;
+    max-width: 350px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#experiencePhoto {
+    float: right;
+    width: 50%;
+    padding: 0;
+    background-color: grey;
+}
+#description {
+    text-align: left;
+}
+
+#wrapper3 {
+    width: 90%;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 120px;
+    display: flex;
+}
+
+#subWrapper1 {
+    width: 50%;
+    margin-right: 20px;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+}
+#subWrapper2 {
+    width: 50%;
+    margin-left: 20px;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+}
+#skills {
+    width: 100%;
+    display: flex;
+}
+#subSkills {
+    width: 50%;
+    margin: 10px;
+}
+#subSkills p {
+    height: 10%;
+    text-align: center;
+    font-size: 20px;
+}
+.skillList {
+    padding: 0;
+}
+
+.skill {
+    display: flex;
+    margin-bottom: 20px;
+}
+.skill:hover {
+    transform: scale(1.1);
+}
+
+.skillItem {
+    padding-left: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    font-size: 22px;
+}
+.myAnchor {
+    position: relative;
+}
 
 
