--- a/resume.css
+++ b/resume.css
@@ -1,7 +1,7 @@
 img {
     display: block;
 }
-.wrapper {
+#wrapper {
     background-color: white;
     width: 90%;
     margin-top: 10px;
@@ -9,15 +9,22 @@ img {
     margin-right: auto;
     margin-bottom: 0px;
     box-shadow: 0px 0px 3px;
-    
-    
-
 }
+#wrapperCondensed {
+    background-color: white;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0px;
+    box-shadow: 0px 0px 3px;
+}
+
 body {
     position: relative;
     margin: 0;
     padding: 0;
-	width: 100%;
+	  width: 100%;
     color: #3d1212;
     background-color: #FFFDF2;
     font-family: 'Nunito Sans', sans-serif;
@@ -138,17 +145,36 @@ body {
     position: fixed;
     top: -30px;
     right: 0;
-    
+    z-index: 1;
+
     -webkit-transition: transform 1s ease-in-out;
     -moz-transition: transform 1s ease-in-out;
     transition: transform 1s ease-in-out;
 }
+
+
+@media (min-width: 768px) and (max-width: 1000px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+    }
+    .navbar-collapse.collapse.in {
+        display: block !important;
+    }
+    .navbar-header .collapse, .navbar-toggle {
+        display:block !important;
+    }
+    .navbar-header {
+        float:none;
+    }
+}
+
+
 .navbar-brand:focus {
     background-color: grey !important;
 }
 .navbar-brand:hover {
     background-color: grey !important;
-    
+
     -moz-transform: translateY(30px);
     -webkit-transform: translateY(30px);
     -o-transform: translateY(30px);
@@ -194,7 +220,7 @@ body {
     margin-right: auto;
     text-align: center;
     display: block;
-    
+
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
 
@@ -224,7 +250,7 @@ h1 {
 }
 
 #introBox img.profile:hover {
-    
+
 }
 
 
@@ -233,7 +259,12 @@ h1 {
     margin-right: auto;
     width: 40%;
     display: flex;
-    
+}
+#socialMediaCondensed {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    display: flex;
 }
 
 .icon {
@@ -251,6 +282,10 @@ h1 {
     width: 45px;
 }
 
+#socialMedia a img {
+  transition: all ease-in-out .3s;
+}
+
 #socialMedia a img:hover {
     transform: scale(1.2);
 }
@@ -264,6 +299,7 @@ h1 {
     padding: 10px;
     width: 65%;
 }
+
 #about p {
     font-size: 20px;
 }
@@ -273,12 +309,12 @@ h1 {
 }
 
 table {
-    
+
 }
 
 table.facts, td, th {
     padding: 5px;
-    
+
 }
 
 table.facts, td{
@@ -370,6 +406,15 @@ h4 {
     margin-bottom: 60px;
     display: flex;
 }
+#wrapper3Condensed {
+  width: 90%;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 120px;
+  display: block;
+}
+
 #subWrapper1 {
     width: 50%;
     margin-right: 20px;
@@ -377,6 +422,18 @@ h4 {
     box-shadow: 0px 0px 3px;
     padding: 20px;
 }
+#subWrapper1Condensed {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+    margin-bottom: 40px;
+}
+
+
+
 #subWrapper2 {
     width: 50%;
     margin-left: 20px;
@@ -384,6 +441,16 @@ h4 {
     box-shadow: 0px 0px 3px;
     padding: 20px;
 }
+#subWrapper2Condensed {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    background-color: #ffff;
+    box-shadow: 0px 0px 3px;
+    padding: 20px;
+}
+
+
 #subWrapperWide {
     margin-top: 60px;
     width: 100%;
@@ -400,7 +467,6 @@ h4 {
     height: 100%;
     margin: 0;
     padding: 0;
-    background-color: green;
 }
 .carousel-inner .item > .col-md-4 {
     padding: 0;
@@ -409,10 +475,38 @@ h4 {
     border-right-style: solid;
     border-left-style: solid;
 }
-
 .col-md-12 {
     height: 50%;
     padding: 0;
+}
+
+#downloadOption {
+  display: block;
+  margin-bottom: 35px;
+}
+
+#downloadButton {
+  height: 50px;
+  color: white;
+  background-color: transparent;
+  border-style: solid;
+  border-width: 4px;
+  border-color: white;
+  padding: 5px;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+
+  transition: all ease-in-out .3s;
+}
+
+#downloadButton:hover {
+
+  color: black;
+  background-color: white;
+
+
 }
 
 
@@ -464,6 +558,7 @@ h4 {
 .projectImg img {
     width: 90%;
     box-shadow: 0px 0px 3px;
+    transition: all ease-in-out .3s;
 }
 .projectImg a {
     margin: 0;
@@ -471,7 +566,7 @@ h4 {
 }
 .projectImg img:hover {
     transform: scale(1.05);
-    transition: all ease-in-out .3s;
+
 }
 .projectDescription {
     width: 100%;
@@ -506,7 +601,7 @@ table.projectFacts, td{
     border-spacing: 10px;
     text-align: left;
     font-size: 18px;
-    
+
 }
 table.projectFacts th {
     border-style: solid;
@@ -516,4 +611,3 @@ table.projectFacts th {
     font-size: 20px;;
     background-color: #00ADB5;
 }
-
