--- a/resume.css
+++ b/resume.css
@@ -3,7 +3,7 @@ img {
 }
 #wrapper {
     background-color: white;
-    width: 90%;
+    width: 100%;
     margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
@@ -237,12 +237,86 @@ body {
     padding-top: 30%;
     padding-bottom: 1%;
 }
-h1 {
+
+
+
+
+testh1 {
     font-size: 80px;
     margin-bottom: 10px;
     margin-top: 0;
     color: #ffff;
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
 }
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+
+#typewriter {
+    visibility: hidden;
+}
+#typewriterVisible {
+    visibility: visible;
+}
+
+
+
+h1 {
+
+    color: #ffff;
+    font-size: 80px;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+    
+
+    animation:
+        3s
+        typing 3.5s steps(40, end);
+}
+@keyframes typing {
+  from { width: 0}
+  to { width: 100%}
+}
+    
+
+
+
+    
+    
+    
 #introBox img.profile {
     border-radius: 50%;
     margin-left: auto;
