--- a/resume.css
+++ b/resume.css
@@ -92,11 +92,14 @@ body {
     z-index: 1;
     
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 93%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 93%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
 
     -webkit-transition: transform 1s ease-in-out;
     -moz-transition: transform 1s ease-in-out;
     transition: transform 1s ease-in-out;
+    
+    
+    
 }
 
 #navbar-brand-wrap {
@@ -414,7 +417,183 @@ h4 {
     font-size: 18px;
 }
 
-#wrapper3 {
+
+/* _________________________________ACTIVITIES:____________________________________________________________ */
+
+.wrapper4 {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 60px;
+    display: block;
+    background-color: white;
+    padding-bottom: 20px;
+}
+
+.col-md-12 {
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+}
+
+#floatingHeader {
+    
+    position: absolute;
+    background-color: #00ADB5;
+    padding-top: 15px;
+    padding-right: 10px;
+    padding-left: 10px;
+    
+    color: white;
+    right: 30%;
+    top: 48%;
+    font-size: 25px;
+    /* clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); */
+    clip-path: polygon(0% 0%, 100% 20%, 100% 100%, 0% 100%);
+}
+
+#subWrapper4 {
+    width: 100%;
+    position: relative;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    top: 10px;
+}
+
+#otherImage {
+    width: 100%;
+    background-color: grey;
+    color: white;
+}
+
+.actColumns {
+    width: 100%;
+    display: flex;
+}
+
+.actColumn {
+    padding: 20px;
+    width: 25%;
+    display: block;
+    transition: all ease-in-out .5s;
+    background-color: white;
+}
+
+.actColumnSelected {
+    padding: 20px;
+    width: 25%;
+    display: block;
+    transition: all ease-in-out .5s;
+    background-color: white;
+    margin-top: 40px;
+}
+
+.actColumn:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.rotated {
+  transform: rotate(180deg);
+  -ms-transform: rotate(180deg); /* IE 9 */
+  -moz-transform: rotate(180deg); /* Firefox */
+  -webkit-transform: rotate(180deg); /* Safari and Chrome */
+  -o-transform: rotate(180deg); /* Opera */
+}
+
+.iconCol {
+    width: 10%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.actColumn img {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.dropdownContent {
+    display: none;
+    width: 100%;
+    padding: 20px;
+}
+
+.dropdownContentSub {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
+#displayArticles {
+    display: flex;
+    width: 100%;
+}
+
+#imgBox {
+    width: 50%;
+    margin: 20px;
+    box-shadow: 2px 2px 10px;
+    transition: all ease-in-out .5s;
+}
+
+#imgBox img {
+    width: 100%;
+}
+
+#imgBox:hover {
+    transform: scale(1.03)
+}
+
+#podcastIntro {
+    width: 100%;
+    display: flex;
+}
+#podColumn1 {
+    width: 25%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#podColumn1 img {
+    width: 100%;
+    padding-right: 20px;
+}
+
+#podColumn2 {
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+#podList {
+    width: 80%;
+}
+
+.podEpisode {
+    margin-bottom: 10px;
+}
+
+.podEpisode p {
+    font-size: 15px;
+}
+
+.episodeHeader {
+    padding-left: 3px;
+    width: 100%;
+    background-color: #184C27;
+}
+.episodeHeader p {
+    color: white;
+    font-size: 20px;
+}
+
+/* _____________________________________________________________________________________________ */
+
+.wrapper3 {
     width: 90%;
     margin-top: 40px;
     margin-left: auto;
