--- a/resume.css
+++ b/resume.css
@@ -417,11 +417,51 @@ h4 {
     margin-right: auto;
     margin-left: auto;
 }
-.warner {
-    width: 50%;
-    max-width: 350px;
+.RMSMC {
     margin-right: auto;
     margin-left: auto;
+}
+
+.moreInfoArrow {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+    transition: all ease-in-out .3s;
+}
+
+.infoRow {
+    width: 100%;
+    display: flex;
+}
+.line {
+    margin-top: 10px;
+    border-top: solid;
+    border-width: 1px;
+    border-color: grey;
+    width: 100%;
+}
+
+.moreInfo {
+    width: 210px;
+    display: flex;
+    transition: all ease-in-out .5s;
+}
+
+.moreInfo:hover {
+    transform: scale(1.08);
+    cursor: pointer;
+}
+
+.moreInfo p {
+    color: grey;
+}
+
+.rotatedInfo {
+  transform: rotate(180deg);
+  -ms-transform: rotate(180deg); /* IE 9 */
+  -moz-transform: rotate(180deg); /* Firefox */
+  -webkit-transform: rotate(180deg); /* Safari and Chrome */
+  -o-transform: rotate(180deg); /* Opera */
 }
 
 #experiencePhoto {
@@ -430,7 +470,9 @@ h4 {
     padding: 0;
     background-color: grey;
 }
-#description {
+
+.description {
+    display: none;
     text-align: left;
     font-size: 18px;
 }
