--- a/resume.css
+++ b/resume.css
@@ -201,6 +201,24 @@ body {
     background-attachment: fixed;
 }
 
+#introBoxCondensed{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    display: block;
+
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+
+    background-image: url(pictures/profile_Ireland_mobile.jpg);
+    background-size: contain;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
 #introContent {
     margin-right: auto;
     margin-left: auto;
